--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="vendor/normalize.css">
   <link rel="stylesheet" href="vendor/fonts.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/_media.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествия по Росии</title>
 </head>
