--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="vendor/normalize.css">
-  <link rel="stylesheet" href="vendor/fonts.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/_media.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествия по Росии</title>
 </head>
@@ -18,12 +15,12 @@
         <a href="" class="link language-select__lang">En</a>
       </div>
     </header>
-    <div class="content">
+    <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по Росии</h1>
         <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
         <img class="lead__image" src="img/lead.jpg" alt="Изображение поезда и железнодорожного маршрута">
-        <small class="image-caption">ваша полка — верхняя</small>
+        <small class="lead__image-caption">ваша полка — верхняя</small>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -55,7 +52,7 @@
           </dl>
         </div>
       </section>
-    </div>
+    </main>
   </div>
 </body>
 </html>
